--- a/templates/series/index.html.twig
+++ b/templates/series/index.html.twig
@@ -3,19 +3,11 @@
 {% block title %}Listagem de Series{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<a href="/series/create" class="btn btn-dark mb-3">Adicionar</a>
 
-<div class="example-wrapper">
-    <h1>Listagem de séries</h1>
-
-    <a href="/series/create">Adicionar</a>
-    <ul>
-        {% for series in seriesList %}
-            <li>{{ series }}</li>
-        {% endfor %}
-    </ul>
-</div>
+<ul class="list-group">
+    {% for series in seriesList %}
+        <li class="list-group-item">{{ series }}</li>
+    {% endfor %}
+</ul>
 {% endblock %}
