--- a/templates/series/form.html.twig
+++ b/templates/series/form.html.twig
@@ -5,20 +5,21 @@
 {% endblock %}
 
 {% block body %}
-    <form method="post"
-          action="{{ series is defined ? path('app_store_series_changes', {series: series.id}) : path('app_add_series') }}">
-        <div class="mb-3">
-            <label for="name" class="form-label">Nome da série:</label>
-            <input type="text" name="name" id="name" class="form-control"
-                   value="{{ series is defined ? series.name : '' }}">
-        </div>
+    {{ form(seriesForm) }}
+{#    <form method="post"#}
+{#          action="{{ series is defined ? path('app_store_series_changes', {series: series.id}) : path('app_add_series') }}">#}
+{#        <div class="mb-3">#}
+{#            <label for="name" class="form-label">Nome da série:</label>#}
+{#            <input type="text" name="name" id="name" class="form-control"#}
+{#                   value="{{ series is defined ? series.name : '' }}">#}
+{#        </div>#}
 
-        {% if series is defined %}
-            <input type="hidden" name="_method" value="PATCH">
-        {% endif %}
+{#        {% if series is defined %}#}
+{#            <input type="hidden" name="_method" value="PATCH">#}
+{#        {% endif %}#}
 
-        <button class="btn btn-dark">
-            {{ series is defined ? 'Editar' : 'Adicionar' }}
-        </button>
-    </form>
+{#        <button class="btn btn-dark">#}
+{#            {{ series is defined ? 'Editar' : 'Adicionar' }}#}
+{#        </button>#}
+{#    </form>#}
 {% endblock %}
