--- a/templates/series/form.html.twig
+++ b/templates/series/form.html.twig
@@ -5,8 +5,10 @@
 {% endblock %}
 
 {% block body %}
-    {{ form_start(seriesForm.name) }}
-    {{ form_row(seriesForm.name) }}
+    {{ form_start(seriesForm) }}
+    {{ form_row(seriesForm.seriesName) }}
+    {{ form_row(seriesForm.seasonsQuantity) }}
+    {{ form_row(seriesForm.episodesPerSeason) }}
     {{ form_widget(seriesForm.save, {'attr': {'class': 'btn-dark'}}) }}
     {{ form_end(seriesForm) }}
 {% endblock %}
