--- a/templates/series/index.html.twig
+++ b/templates/series/index.html.twig
@@ -3,27 +3,36 @@
 {% block title %}Listagem de Series{% endblock %}
 
 {% block body %}
-    <a href="{{ path('app_series_form') }}" class="btn btn-dark mb-3">Adicionar</a>
+    {% if is_granted('ROLE_USER') %}
+        <a href="{{ path('app_series_form') }}" class="btn btn-dark mb-3">Adicionar</a>
+    {% endif %}
 
     <ul class="list-group">
         {% for series in seriesList %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
+                {% if is_granted('ROLE_USER') %}
                 <a href="{{ path('app_seasons', {series: series.id}) }}">
-                    {{ series.name }}
-                </a>
+                    {% endif %}
 
-                <div class="d-flex">
-                    <a href="{{ path('app_edit_series_form', {series: series.id}) }}"
-                       class="btn btn-sm btn-primary me-2">
-                        E
-                    </a>
-                    <form method="post" action="{{ path('app_delete_series', {id: series.id}) }}">
-                        <input type="hidden" name="_method" value="DELETE">
-                        <button class="btn btn-sm btn-danger">
-                            X
-                        </button>
-                    </form>
-                </div>
+                    {{ series.name }}
+                    {% if is_granted('ROLE_USER') %}
+                </a>
+                {% endif %}
+
+                {% if is_granted('ROLE_USER') %}
+                    <div class="d-flex">
+                        <a href="{{ path('app_edit_series_form', {series: series.id}) }}"
+                           class="btn btn-sm btn-primary me-2">
+                            E
+                        </a>
+                        <form method="post" action="{{ path('app_delete_series', {id: series.id}) }}">
+                            <input type="hidden" name="_method" value="DELETE">
+                            <button class="btn btn-sm btn-danger">
+                                X
+                            </button>
+                        </form>
+                    </div>
+                {% endif %}
             </li>
         {% endfor %}
     </ul>
