--- a/templates/seasons/index.html.twig
+++ b/templates/seasons/index.html.twig
@@ -5,6 +5,10 @@
 {% endblock %}
 
 {% block body %}
+    <div class="text-center">
+        <img src="{{ asset('uploads/cover_image/') ~ series.coverImagePath }}"
+             alt="Imagem de capa da série {{ series.name }}" class="img-fluid mb-5"/>
+    </div>
     <ul class="list-group">
         {% for season in seasons %}
             <li class="list-group-item">
