--- a/templates/series/index.html.twig
+++ b/templates/series/index.html.twig
@@ -10,14 +10,25 @@
     <ul class="list-group">
         {% for series in seriesList %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                {% if is_granted('ROLE_USER') %}
-                <a href="{{ path('app_seasons', {series: series.id}) }}">
+                <div class="d-flex align-items-center">
+                    {% if series.coverImagePath %}
+                        <img src="{{ asset('uploads/cover_image/') ~ series.coverImagePath }}"
+                             alt=""
+                             class="img-thumbnail me-3"
+                             width="100"
+                        />
                     {% endif %}
 
-                    {{ series.name }}
                     {% if is_granted('ROLE_USER') %}
-                </a>
-                {% endif %}
+                    <a href="{{ path('app_seasons', {series: series.id}) }}">
+                    {% endif %}
+
+                        {{ series.name }}
+
+                    {% if is_granted('ROLE_USER') %}
+                    </a>
+                    {% endif %}
+                </div>
 
                 {% if is_granted('ROLE_USER') %}
                     <div class="d-flex">
@@ -25,7 +36,7 @@
                            class="btn btn-sm btn-primary me-2">
                             E
                         </a>
-                        <form method="post" action="{{ path('app_delete_series', {id: series.id}) }}">
+                        <form method="post" action="{{ path('app_delete_series', {series: series.id}) }}">
                             <input type="hidden" name="_method" value="DELETE">
                             <button class="btn btn-sm btn-danger">
                                 X
