--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ app.request.locale }}">
 <head>
     <meta charset="UTF-8">
     <title>{{ block('title') }}</title>
@@ -9,10 +9,6 @@
     {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
     {% block stylesheets %}
         {{ encore_entry_link_tags('style') }}
-    {% endblock %}
-
-    {% block javascripts %}
-        {{ encore_entry_script_tags('style') }}
     {% endblock %}
 </head>
 <body>
